# SFML_Study

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: INSTALL_GUIDE.md  MSYS2_SETUP.md
scripts/: build_mingw.bat  build_msys2.sh  check_installation.bat  check_ucrt.bat  full_setup_and_build.bat  install-dependencies.bat  setup-environment.bat  setup-mingw.bat  setup_msys2_env.sh
src/: Board.cpp  Board.hpp  Color.hpp  Player.cpp  Player.hpp  Singleton.hpp  Window.cpp  Window.hpp  main.cpp
